Issue #2220929 by pferlito: Squashed commit of the following:
commit 5fdb4ee9d918c9832cdf874b99119de9482facad
Author: pferlito <pferlito@511172.no-reply.drupal.org>
Date:   Sun Jan 25 11:56:12 2015 -0800

    Rename method and make it protected.

commit 3900c11dccab228b69064a9d13ef376b23bde703
Author: pferlito <pferlito@511172.no-reply.drupal.org>
Date:   Sun Jan 25 11:45:26 2015 -0800

    Using getter method for view id.

commit ca1dfcdee10fc57faf35ca1764fce89b4964770e
Author: pferlito <pferlito@511172.no-reply.drupal.org>
Date:   Tue Jan 20 10:51:23 2015 -0800

    Adding more tests.

commit 84358b6488cba68ac0622a1b52942f8bfcce5470
Author: pferlito <pferlito@511172.no-reply.drupal.org>
Date:   Tue Jan 20 06:12:50 2015 -0800

    Bug fixes and added tests.

commit a1a037035ce00b0839eb87fa56214a34ab2ac533
Author: pferlito <pferlito@511172.no-reply.drupal.org>
Date:   Sat Jan 17 09:32:17 2015 -0800

    Second attempt.

--- a/viewfield.info.yml
+++ b/viewfield.info.yml
@@ -1,7 +1,8 @@
 name: Viewfield
+type: module
 description: 'Defines a field type to display a view.'
+version: VERSION
 core: 8.x
-package: Fields
 dependencies:
   - views
-type: module
+  - field
