--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,5 @@
   "support": {
     "issues": "https://www.drupal.org/project/issues/viewfield"
   },
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0+"
 }
