Issue #2220929 by keithm: Changed README.md to reflect Drupal 8 usage.

--- a/viewfield.info.yml
+++ b/viewfield.info.yml
@@ -1,6 +1,6 @@
 name: Viewfield
 type: module
-description: 'Defines a entity reference field type to display a view.'
+description: 'Defines an entity reference field type to display a view.'
 version: VERSION
 core: 8.x
 dependencies:
