--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "drupal/viewfield",
-  "description": "Defines a field type to reference a Views display.",
+  "description": "Defines an entity reference field type to display a view.",
   "type": "drupal-module",
   "homepage": "http://drupal.org/project/viewfield",
   "support": {
