--- a/viewfield.info.yml
+++ b/viewfield.info.yml
@@ -1,6 +1,7 @@
 name: Viewfield
 type: module
 description: 'Defines an entity reference field type to display a view.'
+package: Field types
 version: VERSION
 core: 8.x
 dependencies:
